@@ -66,7 +66,7 @@ new Effect.Highlight('category-<% $new_category_id %>');
     useTable => 0,
     js       => qq{onclick="catListMan.add('new_category_uri'); return false"}
 &>
-<input type="text" id="new_category_uri" name="new_category_autocomplete" /><div id="category_autocomplete_choices" class="autocomplete"></div><span id="new_cat_warning" style="display: none"><img src="/media/images/dialog-warning.gif" alt="Warning" /> <% $lang->maketext(qq{Unable to add category that does not exist}) %></span>
+<input type="text" id="new_category_uri" name="new_category_autocomplete" size="40" /><div id="category_autocomplete_choices" class="autocomplete"></div><span id="new_cat_warning" style="display: none"><img src="/media/images/dialog-warning.gif" alt="Warning" /> <% $lang->maketext(qq{Unable to add category that does not exist}) %></span>
 <script type="text/javascript">
 new Ajax.Autocompleter("new_category_uri", "category_autocomplete_choices", "/widgets/story_prof/autocomplete_categories.html", { onEmpty: function() { Element.show('new_cat_warning'); }, onNotEmpty: function() { Element.hide('new_cat_warning') }, onEnter: function() { catListMan.add('new_category_uri') } });
 </script>
